--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 }
 
 body{
-  background-image: url('bg.png');
+  background-image: url('/public/bg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
